# ESIBD_core

./: .gitignore  README.md  pyproject.toml
ampr_a/: README.md  ampr_plugin.py
ampr_b/: README.md  ampr_plugin.py
dmmr/: README.md
docs/examples/cgc/: amx_basic.py  dmmr_basic.py  psu_basic.py
docs/notebooks/cgc/: README.md  amx_wrapper.ipynb  dmmr_wrapper.ipynb  psu_wrapper.ipynb
examples/: ampr_basic.py  amx_basic.py  psu_basic.py
examples/cgc/: psu_basic.py
notebooks/cgc/: ampr_wrapper.ipynb  amx_wrapper.ipynb  psu_wrapper.ipynb
notebooks/cgc/.ipynb_checkpoints/: amx_wrapper-checkpoint.ipynb
plugins/esibd_explorer/: README.md
plugins/esibd_explorer/ampr/: README.md  ampr_plugin.py
plugins/esibd_explorer/ampr_a/: README.md  ampr_a_plugin.py  ampr_plugin.py
plugins/esibd_explorer/ampr_b/: README.md  (+2 more)
psu/: README.md  psu_plugin.py
src/cgc/: README.md  __init__.py  _driver_common.py  _process_proxy_support.py
tests/: test_ampr_plugin_channel_sync.py  test_ampr_plugin_packaging.py  test_amx_plugin_behavior.py  test_amx_plugin_packaging.py  test_dmmr_plugin_behavior.py  test_dmmr_plugin_packaging.py  test_psu_plugin_behavior.py  test_psu_plugin_packaging.py
tests/ampr/: test_ampr.py
tests/amx/: test_amx.py
tests/cgc/: test_controller_process.py  test_driver_common.py
tests/plugins/: test_ampr_plugin_channel_sync.py  test_ampr_plugin_packaging.py  test_amx_plugin_behavior.py  test_amx_plugin_packaging.py  test_dmmr_plugin_behavior.py  test_dmmr_plugin_packaging.py  test_psu_plugin_behavior.py  test_psu_plugin_packaging.py
tests/psu/: test_psu.py
(+25 files in other folders)
