[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esibd-core"
version = "0.1.0"
description = "Core drivers for ESIBD lab instrumentation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Durif" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
cgc = ["error_codes.json", "README.md"]
"cgc.ampr" = ["vendor/COM-AMPR-12.h", "vendor/x64/COM-AMPR-12.dll", "README.md"]
"cgc.amx" = ["vendor/COM-HVAMX4ED.h", "vendor/x64/COM-HVAMX4ED.dll", "README.md"]
"cgc.dmmr" = ["vendor/COM-DMMR-8.h", "vendor/x64/COM-DMMR-8.dll", "README.md"]
"cgc.psu" = ["vendor/COM-HVPSU2D.h", "vendor/x64/COM-HVPSU2D.dll", "README.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
